--- a/index.html
+++ b/index.html
@@ -1,293 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" class="sr">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Bharat Choudhary | Developer</title>
-    <meta
-      name="keywords"
-      content="[Bharat7021], [Bharat Choudhary], javascript, HTML, CSS, React.js, Java, Python, FireBase"
-    />
-    <meta name="description" content="Bharat Choudhary | Developer" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="./styles.scss" />
-    <script
-      defer
-      src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
-    ></script>
-  </head>
-  <body>
-    <div id="top"></div>
-    <section id="hero" class="jumbotron">
-      <div class="container">
-        <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Bharat Choudhary</span>
-          <br />
-          I'm the Unknown Developer.
-        </h1>
-        <p class="hero-cta load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
-          >
-        </p>
-      </div>
-    </section>
-    <section id="about">
-      <div class="container">
-        <h2 class="section-title load-hidden">About me</h2>
-        <div class="row about-wrapper">
-          <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__image load-hidden">
-              <img
-                alt="Profile Image"
-                class="img-fluid rounded shadow-lg"
-                height="auto"
-                width="300px"
-                src="assets/myProfile.jpg"
-                alt="Profile Image"
-              />
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__info load-hidden">
-              <p class="about-wrapper__info-text">
-                I am a student constantly learning new things to increase
-                knowledge and experience, hence developing a subject
-                concentrated skill.
-              </p>
-              <p class="about-wrapper__info-text">
-                I love music which ultimately made me learn Beatboxing.
-              </p>
-              <span class="d-flex mt-3">
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--resume"
-                  href="assets/myResume.pdf"
-                >
-                  View Resume
-                </a>
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="projects">
-      <div class="container">
-        <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Book Bounty</h3>
-                <div>
-                  <p class="mb-4">
-                    - Developed a high-performance Flutter app called Book
-                    Bounty that serves as a platform connecting book donors with
-                    recipients in need with 0 investment <br />- Implemented
-                    Flutter Framework and integrated Firebase for seamless user
-                    experience, resulting in a 40% decrease in app load time and
-                    a 25% increase in user retention <br />- Spearheaded the
-                    implementation of CRUD (Create, Read, Update, Delete)
-                    operations and contributed to 10+ UI enhancements
-                  </p>
-                </div>
-
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/Bharat7021/book_bounty"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a
-                  rel="noreferrer"
-                  href="https://github.com/Bharat7021/book_bounty"
-                  target="_blank"
-                >
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/BookBounty.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Simon game</h3>
-                <div>
-                  <p class="mb-4">
-                    Created an engaging and interactive memory game called Simon
-                    game using HTML, CSS and JavaScript with 100 sequences of
-                    rememberance1 <br />- Implemented robust backend
-                    functionality to handle game logic and enhanced user
-                    interaction.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://bharat7021.github.io/Simon-Game-Challenge/"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/Bharat7021/Simon-Game-Challenge"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a
-                  rel="noreferrer"
-                  href="https://bharat7021.github.io/Simon-Game-Challenge/"
-                  target="_blank"
-                >
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/SimonProj.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Tourist app</h3>
-                <div>
-                  <p class="mb-4">
-                    - Developed a comprehensive guide app for the Mumbai area,
-                    featuring the locations of 5 major tourist places and 12
-                    hotels
-                    <br />- Created mobile application using Java and XML within
-                    Android Studio, focusing on user-friendly navigation and
-                    providing valuable information to tourists <br />- Led the
-                    Backend development, including data retrieval and
-                    presentation of the data
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/Bharat7021/Tourist"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a
-                  rel="noreferrer"
-                  href="https://github.com/Bharat7021/Tourist"
-                  target="_blank"
-                >
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="contact">
-      <div class="container">
-        <h2 class="section-title">Contact</h2>
-        <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">Mail</p>
-          <a
-            rel="noreferrer"
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:bharat9819075142@gmail.com"
-            >Send Mail to Me</a
-          >
-        </div>
-      </div>
-    </section>
-    <footer class="footer navbar-static-bottom">
-      <div class="container">
-        <a rel="noreferrer" href="#top" class="back-to-top">
-          <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
-        </a>
-        <div class="social-links">
-          <a
-            rel="noreferrer"
-            href="https://www.instagram.com/bharat__choudhary7/#"
-            target="_blank"
-          >
-            <i class="fa fa-instagram fa-inverse"></i>
-          </a>
-          <a
-            rel="noreferrer"
-            href="https://www.linkedin.com/in/bharatchoudhary981"
-            target="_blank"
-          >
-            <i class="fa fa-linkedin fa-inverse"></i>
-          </a>
-          <a
-            rel="noreferrer"
-            href="https://www.github.com/Bharat7021"
-            target="_blank"
-          >
-            <i class="fa fa-github fa-inverse"></i>
-          </a>
-        </div>
-        <hr />
-      </div>
-    </footer>
-    <script defer type="module" src="./index.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en" class="sr"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon shortcut" type="image/png" href="/favicon.887424ff.png"><title>Bharat Choudhary | Developer</title><meta name="keywords" content="[Bharat7021], [Bharat Choudhary], javascript, HTML, CSS, React.js, Java, Python, FireBase"><meta name="description" content="Bharat Choudhary | Developer"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="/index.dc60bf54.css"><script defer src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script></head><body> <div id="top"></div> <section id="hero" class="jumbotron"> <div class="container"> <h1 class="hero-title load-hidden"> Hi, my name is <span class="text-color-main">Bharat Choudhary</span> <br> I'm the Unknown Developer. </h1> <p class="hero-cta load-hidden"> <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">Know more</a> </p> </div> </section> <section id="about"> <div class="container"> <h2 class="load-hidden section-title">About me</h2> <div class="about-wrapper row"> <div class="col-md-6 col-sm-12"> <div class="about-wrapper__image load-hidden"> <img alt="Profile Image" class="img-fluid rounded shadow-lg" height="auto" width="300px" src="/myProfile.1467194f.jpg"> </div> </div> <div class="col-md-6 col-sm-12"> <div class="about-wrapper__info load-hidden"> <p class="about-wrapper__info-text"> I am a student constantly learning new things to increase knowledge and experience, hence developing a subject concentrated skill. </p> <p class="about-wrapper__info-text"> I love music which ultimately made me learn Beatboxing. </p> <span class="d-flex mt-3"> <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="/assets/myResume.pdf"> View Resume </a> </span> </div> </div> </div> </div> </section> <section id="projects"> <div class="container"> <div class="project-wrapper"> <h2 class="dark-blue-text section-title">Projects</h2> <div class="row"> <div class="col-lg-4 col-sm-12"> <div class="load-hidden project-wrapper__text"> <h3 class="project-wrapper__text-title">Book Bounty</h3> <div> <p class="mb-4"> - Developed a high-performance Flutter app called Book Bounty that serves as a platform connecting book donors with recipients in need with 0 investment <br>- Implemented Flutter Framework and integrated Firebase for seamless user experience, resulting in a 40% decrease in app load time and a 25% increase in user retention <br>- Spearheaded the implementation of CRUD (Create, Read, Update, Delete) operations and contributed to 10+ UI enhancements </p> </div> <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="https://github.com/Bharat7021/book_bounty"> Source Code </a> </div> </div> <div class="col-lg-8 col-sm-12"> <div class="load-hidden project-wrapper__image"> <a rel="noreferrer" href="https://github.com/Bharat7021/book_bounty" target="_blank"> <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5" class="js-tilt rounded thumbnail"> <img alt="Project Image" class="img-fluid" src="/BookBounty.c23eec76.jpg"> </div> </a> </div> </div> </div> <div class="row"> <div class="col-lg-4 col-sm-12"> <div class="load-hidden project-wrapper__text"> <h3 class="project-wrapper__text-title">Simon game</h3> <div> <p class="mb-4"> Created an engaging and interactive memory game called Simon game using HTML, CSS and JavaScript with 100 sequences of rememberance1 <br>- Implemented robust backend functionality to handle game logic and enhanced user interaction. </p> </div> <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero" href="https://bharat7021.github.io/Simon-Game-Challenge/"> See Live </a> <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="https://github.com/Bharat7021/Simon-Game-Challenge"> Source Code </a> </div> </div> <div class="col-lg-8 col-sm-12"> <div class="load-hidden project-wrapper__image"> <a rel="noreferrer" href="https://bharat7021.github.io/Simon-Game-Challenge/" target="_blank"> <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5" class="js-tilt rounded thumbnail"> <img alt="Project Image" class="img-fluid" src="/SimonProj.309bf54d.jpg"> </div> </a> </div> </div> </div> <div class="row"> <div class="col-lg-4 col-sm-12"> <div class="load-hidden project-wrapper__text"> <h3 class="project-wrapper__text-title">Tourist app</h3> <div> <p class="mb-4"> - Developed a comprehensive guide app for the Mumbai area, featuring the locations of 5 major tourist places and 12 hotels <br>- Created mobile application using Java and XML within Android Studio, focusing on user-friendly navigation and providing valuable information to tourists <br>- Led the Backend development, including data retrieval and presentation of the data </p> </div> <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="https://github.com/Bharat7021/Tourist"> Source Code </a> </div> </div> <div class="col-lg-8 col-sm-12"> <div class="load-hidden project-wrapper__image"> <a rel="noreferrer" href="https://github.com/Bharat7021/Tourist" target="_blank"> <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5" class="js-tilt rounded thumbnail"> <img alt="Project Image" class="img-fluid" src="/project.0b14f8de.jpg"> </div> </a> </div> </div> </div> </div> </div> </section> <section id="contact"> <div class="container"> <h2 class="section-title">Contact</h2> <div class="contact-wrapper load-hidden"> <p class="contact-wrapper__text">Mail</p> <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:bharat9819075142@gmail.com">Send Mail to Me</a> </div> </div> </section> <footer class="footer navbar-static-bottom"> <div class="container"> <a rel="noreferrer" href="#top" class="back-to-top"> <i class="fa fa-2x fa-angle-up" aria-hidden="true"></i> </a> <div class="social-links"> <a rel="noreferrer" href="https://www.instagram.com/bharat__choudhary7/#" target="_blank"> <i class="fa fa-instagram fa-inverse"></i> </a> <a rel="noreferrer" href="https://www.linkedin.com/in/bharatchoudhary981" target="_blank"> <i class="fa fa-inverse fa-linkedin"></i> </a> <a rel="noreferrer" href="https://www.github.com/Bharat7021" target="_blank"> <i class="fa fa-github fa-inverse"></i> </a> </div> <hr> </div> </footer> <script defer type="module" src="/index.f3360eb2.js"></script> </body></html>
