--- a/src/index.html
+++ b/src/index.html
@@ -288,6 +288,6 @@
         <hr />
       </div>
     </footer>
-    <script defer type="module" src="./index.js"></script>
+    <script defer type="module" src="index.js"></script>
   </body>
 </html>
